Espressif/build/log/idf_py_stdout_output_13209
Command: ninja all
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/t70n/Documents/Corto-Densimeter/Espressif/build/bootloader/esp-idf/esptool_py && /home/t70n/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/t70n/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/t70n/Documents/Corto-Densimeter/Espressif/build/bootloader/bootloader.bin
Bootloader binary size 0x57e0 bytes. 0x2820 bytes (31%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/densimeter_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/densimeter_main.c.obj 
/home/t70n/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/t70n/Documents/Corto-Densimeter/Espressif/build/config -I/home/t70n/Documents/Corto-Densimeter/Espressif/main -I/home/t70n/Documents/Corto-Densimeter/Espressif/main/Hardware/I2C -I/home/t70n/Documents/Corto-Densimeter/Espressif/main/Hardware/MPU6050 -I/home/t70n/Documents/Corto-Densimeter/Espressif/main/Hardware/LED -I/home/t70n/esp/v5.5.1/esp-idf/components/newlib/platform_include -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/config/include -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/config/riscv/include -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/t70n/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c6/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/t70n/esp/v5.5.1/esp-idf/components/heap/include -I/home/t70n/esp/v5.5.1/esp-idf/components/heap/tlsf -I/home/t70n/esp/v5.5.1/esp-idf/components/log/include -I/home/t70n/esp/v5.5.1/esp-idf/components/soc/include -I/home/t70n/esp/v5.5.1/esp-idf/components/soc/esp32c6 -I/home/t70n/esp/v5.5.1/esp-idf/components/soc/esp32c6/include -I/home/t70n/esp/v5.5.1/esp-idf/components/soc/esp32c6/register -I/home/t70n/esp/v5.5.1/esp-idf/components/hal/platform_port/include -I/home/t70n/esp/v5.5.1/esp-idf/components/hal/esp32c6/include -I/home/t70n/esp/v5.5.1/esp-idf/components/hal/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_rom/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_rom/esp32c6/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_rom/esp32c6/include/esp32c6 -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_rom/esp32c6 -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_common/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_system/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_system/port/soc -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_system/port/include/riscv -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -I/home/t70n/esp/v5.5.1/esp-idf/components/riscv/include -I/home/t70n/esp/v5.5.1/esp-idf/components/driver/deprecated -I/home/t70n/esp/v5.5.1/esp-idf/components/driver/i2c/include -I/home/t70n/esp/v5.5.1/esp-idf/components/driver/touch_sensor/include -I/home/t70n/esp/v5.5.1/esp-idf/components/driver/twai/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_pm/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_ringbuf/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_gpio/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_pcnt/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_gptimer/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_spi/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_mcpwm/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_ana_cmpr/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_i2s/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_sdmmc/include -I/home/t70n/esp/v5.5.1/esp-idf/components/sdmmc/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_sdspi/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_sdio/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_dac/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_rmt/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_tsens/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_sdm/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_i2c/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_uart/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_ledc/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_parlio/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_twai/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/t70n/Documents/Corto-Densimeter/Espressif=. -fmacro-prefix-map=/home/t70n/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/densimeter_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/densimeter_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/densimeter_main.c.obj -c /home/t70n/Documents/Corto-Densimeter/Espressif/main/densimeter_main.c
In file included from /home/t70n/esp/v5.5.1/esp-idf/components/esp_driver_i2c/include/driver/i2c_master.h:10,
                 from /home/t70n/Documents/Corto-Densimeter/Espressif/main/Hardware/I2C/i2c_functions.h:4,
                 from /home/t70n/Documents/Corto-Densimeter/Espressif/main/densimeter_main.c:2:
/home/t70n/Documents/Corto-Densimeter/Espressif/main/densimeter_main.c: In function 'app_main':
/home/t70n/esp/v5.5.1/esp-idf/components/esp_common/include/esp_err.h:116:29: error: void value not ignored as it ought to be
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                             ^
/home/t70n/Documents/Corto-Densimeter/Espressif/main/densimeter_main.c:40:5: note: in expansion of macro 'ESP_ERROR_CHECK'
   40 |     ESP_ERROR_CHECK(leds_init(LED_GREEN_GPIO, LED_RED_GPIO));
      |     ^~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
